Fixed broken delete buttons. I think I broke it when I switched to using jquery.data() I was wrapping 'this' in jquery and I think it added an extra layer which hid the .data I am not sure

--- a/style.css
+++ b/style.css
@@ -42,10 +42,6 @@ header h1 {
   padding: 10px 10px 10px 30px;
 }
 
-input {
-  /* border: solid 1px transparent; */
-}
-
 #employeeInfoSection {
   clear: both;
 }
